~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.3 version

* The PGPORT/PGOPTS/.. variables should be correctly forwarded down from
  the initstcript into postgresql-ctl.

* Initscript's 'start' function again reports success if daemon is already
  running.

New in 3.3 version

* New option PGSTARTWAIT for sysvinit systems.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 3.2 version

* The --new-systemd-unit option now cleans the recently created drop-in
  directory if something goes wrong.

Bugfixes in 3.2 version

* Fix regression of setting the default pgdata variable for non-default
  unit names.  This broke --new-systemd-unit option and --initdb, because
  the postgresql-setup logic tried to create the data directory on the
  same place as the _default_ unit stores data (instead of explicitly
  asking for --datadir option).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 3.1 version

* When doing --upgrade, postgresql-setup now guards against upgrading when
  the old postgresql server is still running.

Bugfixes in 3.1 version

* The 'pg_upgrade --link' option is not used for non-in-place upgrades
  scenarios.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 3.0 version

* Use 'pg_upgrade --username' instead of 'pg_upgrade --user' for
  PostgreSQL >= 9.4.

* postgresql-setup now works if postgres user is /bin/nologin

* Legacy scripts are now generated from single template file, also are
  simplified a bit.

* There are now options (by upgrade configuration file) how to upgrade from an
  PG stack running in SCL (Software Collections)

* documentation README.rpm-dist is generated from docbook sources

* The sysvinit support should be OK finally, sysvinit system is now
  automatically detected without --with-sysvinit configure option.

* The starting timeout is now configurable via PGSTARTTIMEOUT.
