@@ -1,5 +1,14 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+Bugfixes in 3.4 version
+
+* Fix upgrade for non-standard unit names with --unit option.
+
+* Add --upgrade-from-unit option which allows proper selection of
+  predecessor service name (when the default detection does not help).
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 Bugfixes in 3.3 version
 
 * The PGPORT/PGOPTS/.. variables should be correctly forwarded down from
